--- a/src/test/util/CMakeLists.txt
+++ b/src/test/util/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(test_util STATIC EXCLUDE_FROM_ALL
   blockfilter.cpp
   coins.cpp
   coverage.cpp
+  index.cpp
   json.cpp
   logging.cpp
   mining.cpp
