--- a/test/config.ini.in
+++ b/test/config.ini.in
@@ -26,5 +26,6 @@ RPCAUTH=@abs_top_srcdir@/share/rpcauth/rpcauth.py
 @ENABLE_FUZZ_BINARY_TRUE@ENABLE_FUZZ_BINARY=true
 @ENABLE_ZMQ_TRUE@ENABLE_ZMQ=true
 @ENABLE_EXTERNAL_SIGNER_TRUE@ENABLE_EXTERNAL_SIGNER=true
+@ENABLE_WAIT_FOR_DEBUGGER_TRUE@ENABLE_WAIT_FOR_DEBUGGER=true
 @ENABLE_USDT_TRACEPOINTS_TRUE@ENABLE_USDT_TRACEPOINTS=true
 @ENABLE_IPC_TRUE@ENABLE_IPC=true
