--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -122,6 +122,7 @@ add_executable(test_bitcoin
   uint256_tests.cpp
   util_check_tests.cpp
   util_expected_tests.cpp
+  util_log_tests.cpp
   util_string_tests.cpp
   util_tests.cpp
   util_threadnames_tests.cpp
